# plugin/.well-known/openapi.yaml
@@ -1,29 +1,89 @@
 openapi: 3.0.1
 info:
-  title: TODO Plugin
-  description: A plugin that allows the user to create and manage a TODO list using ChatGPT.
+  title: Korean corporate's disclosure Plugin
+  description: A plugin that return korean corporate's disclosure.
   version: 'v1'
 servers:
   - url: https://dart-plugin.com
 paths:
-  /todos:
+  /dart/get_disclosure_list_by_corporate:
     get:
-      operationId: getTodos
-      summary: Get the list of todos
+      operationId: get_disclosure_list_by_corporate
+      summary: Get the list of disclosure of given corporate
+      parameters:
+        - in: query
+          name: corp_name
+          schema:
+            type: string
+          required: true
+          description: corporation name which want to get list of disclosure
       responses:
         "200":
           description: OK
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/getTodosResponse'
+                $ref: '#/components/schemas/getDisclosureListResponse'
+  /dart/get_disclosure_detail:
+    get:
+      operationId: get_disclosure_detail
+      summary: Get disclosure of given rcept_no
+      parameters:
+        - in: query
+          name: rcept_no
+          schema:
+            type: string
+          required: true
+          description: disclosure rcept_no which want to get content of disclosure
+      
+      responses:
+        "200":
+          description: OK
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/getDisclosureDetailResponse'
 components:
   schemas:
-    getTodosResponse:
+    getDisclosureListResponse:
       type: object
       properties:
-        todos:
+        status:
+          type: string
+        message:
+          type: string
+        page_no:
+          type: integer
+        page_count:
+          type: integer
+        total_count:
+          type: integer
+        total_page:
+          type: integer
+        list:
           type: array
           items:
-            type: string
-          description: The list of todos.
+            type: object
+            properties:
+              corp_code:
+                type: string
+              corp_name:
+                type: string
+              stock_code:
+                type: string
+              corp_cls:
+                type: string
+              report_nm:
+                type: string
+              rcept_no:
+                type: string
+              flr_nm:
+                type: string
+              rcept_dt:
+                type: string
+              rm:
+                type: string
+    getDisclosureDetailResponse:
+      type: array
+      items:
+        type: string
